[gd_scene load_steps=13 format=2]

[ext_resource path="res://Graphics/Theme/Map Theme.tres" type="Theme" id=1]
[ext_resource path="res://Graphics/Sprites/UI/IconMenu.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Graphics/Sprites/loot03bag.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Sprites/bicolor_portraits.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Sprites/scroll.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Bio.tscn" type="PackedScene" id=8]
[ext_resource path="res://Graphics/Theme/Battle Theme.tres" type="Theme" id=9]
[ext_resource path="res://Scenes/CaracterAnimation.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=2]
resource_name = "BioToInv"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 25 ), Vector2( -90, 25 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "InvToBio"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -90, 25 ), Vector2( 0, 25 ) ]
}

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="Display" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Display"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.854902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="HBoxContainer" parent="Display"]
anchor_right = 1.0
margin_left = 18.0
margin_top = 3.0
margin_bottom = 13.0
theme = ExtResource( 1 )
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BioButton" type="Button" parent="Display/MenuBar"]
margin_left = 7.0
margin_right = 23.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="Display/MenuBar/BioButton"]
position = Vector2( 8, 8 )
scale = Vector2( 0.466667, 0.466667 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 1, 1, 30, 30 )

[node name="InventoryButton" type="Button" parent="Display/MenuBar"]
margin_left = 28.0
margin_right = 44.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="Display/MenuBar/InventoryButton"]
position = Vector2( 8, 8 )
scale = Vector2( 0.46875, 0.515625 )
texture = ExtResource( 5 )

[node name="LogButton" type="Button" parent="Display/MenuBar"]
margin_left = 49.0
margin_right = 65.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="Display/MenuBar/LogButton"]
position = Vector2( 8, 8 )
scale = Vector2( 0.4375, 0.40625 )
texture = ExtResource( 7 )

[node name="Slider" type="Panel" parent="Display"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
margin_right = 180.0
rect_min_size = Vector2( 270, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Display/Slider"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bio" parent="Display/Slider/HBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 90.0
margin_bottom = 135.0
size_flags_horizontal = 3

[node name="Inventory" parent="Display/Slider/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 0.0
margin_right = 180.0
margin_bottom = 135.0
size_flags_horizontal = 3

[node name="Log" type="Control" parent="Display/Slider/HBoxContainer"]
margin_left = 180.0
margin_right = 270.0
margin_bottom = 135.0
size_flags_horizontal = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Display/Slider"]
anims/BioToInv = SubResource( 2 )
anims/InvToBio = SubResource( 1 )

[node name="CharacterAnimation" parent="Display" instance=ExtResource( 10 )]
position = Vector2( 28, 31 )
scale = Vector2( 0.5, 0.5 )

[node name="MenuButton" type="Button" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 15.0
margin_bottom = 13.0
rect_min_size = Vector2( 12, 10 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="MenuButton"]
position = Vector2( 6, 5 )
scale = Vector2( 0.8, 0.75 )
texture = ExtResource( 2 )
[connection signal="pressed" from="Display/MenuBar/BioButton" to="." method="_on_BioButton_pressed"]
[connection signal="pressed" from="Display/MenuBar/InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
